2. body y color de pagina

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>taller Git 01</title>
 </head>
-<body>
+<body style="background-color: rgb(136, 3, 3); font-family: Arial, sans-serif;">
+
     
 </body>
 </html>
