--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>taller Git 01</title>
 </head>
 <body style="background-color: rgb(136, 3, 3); font-family: Arial, sans-serif;">
-
+    
+    <h1 style="color: rgb(178, 0, 248); text-align: center;">Sergio Barros</h1> <!-- Encabezado Principal -->
     
 </body>
 </html>
