5. encabezado de hobbies

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <hr>
 
-    
+    <h3 style="color: rgb(178, 0, 248);">Hobbies</h3> <!-- Lista de Hobbies -->
+        <ul>
 </body>
 </html>
