--- a/index.html
+++ b/index.html
@@ -14,5 +14,9 @@
 
     <h3 style="color: rgb(178, 0, 248);">Hobbies</h3> <!-- Lista de Hobbies -->
         <ul>
+            <li style="color: rgb(181, 0, 253);">jugar ajedrez</li>
+            <li style="color: rgb(181, 0, 253);">escuchar musica vieja</li>
+            <li style="color: rgb(181, 0, 253);">caminar</li>
+        </ul>
 </body>
 </html>
