--- a/index.html
+++ b/index.html
@@ -18,5 +18,12 @@
             <li style="color: rgb(181, 0, 253);">escuchar musica vieja</li>
             <li style="color: rgb(181, 0, 253);">caminar</li>
         </ul>
+        
+    
+    <hr>
+
+    <h3 style="color: rgb(178, 0, 248);">teen wolf</h3> <!-- primera serie -->
+    <blockquote style="color: rgb(181, 0, 253);"> <strong>Descripcion:</strong> Scott McCall un estudiante de secundaria que vive en el anonimato, está tratando de liberarse de algo imposible que pudiese suceder, en la forma más misteriosa y complicada. Mientras caminaba entre el bosque una noche, Scott se encuentra con una criatura que lo muerde y su vida cambia para siempre.</blockquote>
+     <!-- Imagen -->
 </body>
 </html>
