--- a/index.html
+++ b/index.html
@@ -26,5 +26,10 @@
     <blockquote style="color: rgb(181, 0, 253);"> <strong>Descripcion:</strong> Scott McCall un estudiante de secundaria que vive en el anonimato, está tratando de liberarse de algo imposible que pudiese suceder, en la forma más misteriosa y complicada. Mientras caminaba entre el bosque una noche, Scott se encuentra con una criatura que lo muerde y su vida cambia para siempre.</blockquote>
      <!-- Imagen -->
      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fc/Teen_Wolf_2011_Title_card.jpg/1024px-Teen_Wolf_2011_Title_card.jpg" alt="teen wolf" style="display: block; margin-left: auto; margin-right: auto;" width="300">
+    
+     <hr>
+    
+     <h4 style="color: rgb(178, 0, 248);">Red vs. Blue</h4> <!-- segunda serie -->
+    <blockquote style="color: rgb(181, 0, 253);"> <strong>Descripcion:</strong> Una parodia de los videojuegos que envuelven una guerra civil en el medio de un cañón abandonado.</blockquote>
 </body>
 </html>
