10. segunda imagen serie git
clear
fkdgndfklo

2

--- a/index.html
+++ b/index.html
@@ -28,8 +28,11 @@
      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fc/Teen_Wolf_2011_Title_card.jpg/1024px-Teen_Wolf_2011_Title_card.jpg" alt="teen wolf" style="display: block; margin-left: auto; margin-right: auto;" width="300">
     
      <hr>
-    
+
      <h4 style="color: rgb(178, 0, 248);">Red vs. Blue</h4> <!-- segunda serie -->
     <blockquote style="color: rgb(181, 0, 253);"> <strong>Descripcion:</strong> Una parodia de los videojuegos que envuelven una guerra civil en el medio de un cañón abandonado.</blockquote>
+    <!-- Imagen -->
+    <img src="https://en.wikipedia.org/wiki/File:Red_vs._Blue_logo.jpg" alt="RVB" style="display: block; margin-left: auto; margin-right: auto;" width="300">
+
 </body>
 </html>
