11. actualizacion de imagen

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
      <h4 style="color: rgb(178, 0, 248);">Red vs. Blue</h4> <!-- segunda serie -->
     <blockquote style="color: rgb(181, 0, 253);"> <strong>Descripcion:</strong> Una parodia de los videojuegos que envuelven una guerra civil en el medio de un cañón abandonado.</blockquote>
     <!-- Imagen -->
-    <img src="https://en.wikipedia.org/wiki/File:Red_vs._Blue_logo.jpg" alt="RVB" style="display: block; margin-left: auto; margin-right: auto;" width="300">
+    <img src="https://static.wikia.nocookie.net/rvb/images/d/dd/RvB_Logo_2022.png/revision/latest?cb=20220702003339" alt="RVB" style="display: block; margin-left: auto; margin-right: auto;" width="300">
 
 </body>
 </html>
